--- a/css/iconfont.css
+++ b/css/iconfont.css
@@ -1,10 +1,10 @@
 
 @font-face {font-family: "iconfont";
-  src: url('iconfont.eot?t=1494812464862'); /* IE9*/
-  src: url('iconfont.eot?t=1494812464862#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('iconfont.woff?t=1494812464862') format('woff'), /* chrome, firefox */
-  url('iconfont.ttf?t=1494812464862') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
-  url('iconfont.svg?t=1494812464862#iconfont') format('svg'); /* iOS 4.1- */
+  src: url('../fonts/iconfont.eot?t=1494812464862'); /* IE9*/
+  src: url('../fonts/iconfont.eot?t=1494812464862#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('../fonts/iconfont.woff?t=1494812464862') format('woff'), /* chrome, firefox */
+  url('../fonts/iconfont.ttf?t=1494812464862') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
+  url('../fonts/iconfont.svg?t=1494812464862#iconfont') format('svg'); /* iOS 4.1- */
 }
 
 .iconfont {
