--- a/css/index.css
+++ b/css/index.css
@@ -43,7 +43,10 @@ legend,
 img,
 div,
 input,
-button {
+button,
+section,
+header,
+footer {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -54,6 +57,14 @@ img {
 }
 img {
   display: block;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: normal;
 }
 address,
 caption,
@@ -107,23 +118,277 @@ table {
 }
 body {
   color: #333;
-  font: 12px/20px "SimSun", "宋体", "Arial Narrow", HELVETICA;
+  font: 12px/1 "微软雅黑", "Arial Narrow", HELVETICA;
   background: #fff;
 }
 a {
-  color: #666;
   text-decoration: none;
-}
-a:visited {
-  color: #666;
 }
 a:hover,
 a:active,
 a:focus {
-  color: #ff8400;
   text-decoration: none;
 }
+body {
+  background-color: #f9f9f9;
+}
 header {
-  height: 0.95rem;
+  height: 0.94rem;
   background-color: #fa3432;
+  font-size: 0.3rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  color: #FFF;
+  padding-left: 0.15rem;
+  padding-right: 0.3rem;
+}
+header a {
+  color: #FFF;
+}
+header .logo a {
+  display: flex;
+  align-items: center;
+}
+header .logo a img {
+  margin-right: 0.1rem;
+  width: 0.47rem;
+  height: 0.49rem;
+}
+header .logo a h1 {
+  font-size: 0.3rem;
+}
+.topnav {
+  height: 0.86rem;
+  font-size: 0.24rem;
+  display: flex;
+  background-color: #FFF;
+  align-items: center;
+  justify-content: space-around;
+}
+.topnav a {
+  color: #4b4a4a;
+}
+.topnav a.current {
+  color: #ff3636;
+}
+.swipe {
+  overflow: hidden;
+  visibility: hidden;
+  position: relative;
+}
+.swipe .swipe-wrap {
+  overflow: hidden;
+  position: relative;
+}
+.swipe .swipe-wrap > div {
+  float: left;
+  width: 100%;
+  position: relative;
+}
+.swipe .swipe-wrap > div img {
+  width: 100%;
+}
+.swipe .indirector {
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+.swipe .indirector span {
+  display: inline-block;
+  margin: 3px;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background-color: #fff;
+}
+.swipe .indirector span.on {
+  background-color: red;
+}
+.usernav {
+  display: flex;
+  align-items: center;
+  background-color: #FFF;
+  height: 2rem;
+  justify-content: space-around;
+}
+.usernav .iconfont {
+  width: 0.9rem;
+  height: 0.9rem;
+  line-height: 0.9rem;
+  font-size: 0.45rem;
+  display: block;
+  text-align: center;
+  border-radius: 30%;
+  color: #FFF;
+}
+.usernav .icon-lock-fill {
+  background-color: #4099e9;
+}
+.usernav .icon-jiaruwomen {
+  background-color: #fb6361;
+}
+.usernav .icon-xinshouzhiyin {
+  background-color: #40c8b0;
+}
+.usernav .icon-wenti {
+  background-color: #ffae28;
+}
+.usernav p {
+  color: #808080;
+  text-align: center;
+  padding-top: 0.1rem;
+  font-size: 0.24rem;
+}
+.hotpro .title,
+.new .title {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  color: #494848;
+  height: 0.95rem;
+  font-size: 0.3rem;
+}
+.hotpro .title div,
+.new .title div {
+  display: flex;
+  align-items: center;
+}
+.hotpro .title .hot,
+.new .title .hot {
+  width: 0.44rem;
+  height: 0.44rem;
+  margin-right: 0.16rem;
+}
+.hotpro .title h3,
+.new .title h3 {
+  font-size: 0.3rem;
+}
+.hotpro {
+  padding: 0 0.23rem;
+}
+.hotpro .title a {
+  color: #9a9b9c;
+}
+.hotpro .item {
+  height: 2.55rem;
+  padding: 0.25rem;
+  border: 1px solid #e9e9e8;
+  background-color: #FFF;
+  margin-bottom: 0.25rem;
+}
+.hotpro .item .itemtle {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 0.28rem;
+  color: #494948;
+  margin-bottom: 0.28rem;
+}
+.hotpro .item .itemtle span {
+  display: inline-block;
+  width: 0.85rem;
+  height: 0.3rem;
+  color: #FFF;
+  background-color: #ffab37;
+  font-size: 0.2rem;
+  text-align: center;
+  line-height: 0.3rem;
+}
+.hotpro .item .itemtle .icon-vip {
+  display: inline-block;
+  width: 0.33rem;
+  height: 0.3rem;
+  vertical-align: middle;
+  text-align: center;
+  line-height: 0.3rem;
+  background-color: #ff7404;
+  margin-left: 0.04rem;
+}
+.hotpro .item .itemyl {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.hotpro .item .itemyl .lv {
+  margin-left: 0.43rem;
+  color: #fb4034;
+  font-size: 0.38rem;
+}
+.hotpro .item .itemyl .lv span {
+  color: #ff7900;
+  font-size: 0.24rem;
+}
+.hotpro .item .itemyl .date {
+  font-size: 0.3rem;
+  line-height: 0.3rem;
+  color: #9a9b9c;
+}
+.hotpro .item .itemyl .date strong {
+  color: #3d3c3c;
+}
+.hotpro .item .itemyl .date .day {
+  margin-bottom: 0.3rem;
+}
+.hotpro .item .itemyl img {
+  width: 1.4rem;
+  height: 1.4rem;
+}
+.new {
+  background-color: #FFF;
+  margin-bottom: 0.25rem;
+}
+.new .title {
+  padding: 0 0.23rem;
+  border-bottom: 1px solid #e6e6e5;
+}
+.new .newslist {
+  padding-top: 0.35rem;
+}
+.new .item {
+  display: flex;
+  margin-bottom: 0.35rem;
+  padding: 0 0.23rem;
+}
+.new .item img {
+  width: 1.1rem;
+  height: 1.1rem;
+  border-radius: 20%;
+  margin-right: 0.23rem;
+}
+.new .item div {
+  flex: 1 1 auto;
+}
+.new .item h4 {
+  font-size: 0.3rem;
+  color: #494848;
+  margin-bottom: 0.3rem;
+  padding-top: 0.05rem;
+}
+.new .item p {
+  font-size: 0.24rem;
+  color: #9a9b9c;
+  display: flex;
+  justify-content: space-between;
+}
+footer {
+  padding-top: 0.45rem;
+  background-color: #FFF;
+  border-top: 1px solid #e6e6e5;
+  height: 1.65rem;
+}
+footer .version {
+  text-align: center;
+  font-size: 0.28rem;
+  color: #494848;
+}
+footer .version a {
+  color: #494848;
+}
+footer .copyright {
+  font-size: 0.28rem;
+  color: #9A9B9C;
+  text-align: center;
+  margin-top: 0.22rem;
 }
