--- a/less/z.less
+++ b/less/z.less
@@ -515,4 +515,8 @@
 .pb(@v){padding-bottom:@v/@baseWidth*1rem}
 .lh(@v){line-height: @v/@baseWidth*1rem;}
 .plr(@v){padding:0 @v/@baseWidth*1rem;}
+.ptb(@v){padding:@v/@baseWidth*1rem 0;}
 .pd(@v){padding:@v/@baseWidth*1rem;}
+.top(@v){top:@v/@baseWidth*1rem;}
+.left(@v){left:@v/@baseWidth*1rem;}
+.ti(@v){text-indent:@v/@baseWidth*1rem;}
