--- a/css/detail.css
+++ b/css/detail.css
@@ -223,3 +223,41 @@ footer .copyright {
   text-align: center;
   margin-top: 0.22rem;
 }
+.lv {
+  height: 2.22rem;
+  background: linear-gradient(to bottom, #ff3c00 0%, #d80607 100%);
+}
+.lv p {
+  text-align: center;
+  color: #FFF;
+}
+.lv .lx {
+  font-size: 0.68rem;
+  padding-top: 0.5rem;
+}
+.lv .desc {
+  font-size: 0.3rem;
+  margin-top: 0.42rem;
+}
+.detaillv {
+  height: 0.79rem;
+  border-bottom: 1px solid #f1f0f0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.detaillv li {
+  width: 50%;
+  text-align: center;
+  font-size: 0.3rem;
+  color: #777;
+}
+.detaillv li:nth-child(1) {
+  border-right: 1px solid #f1f0f0;
+}
+.fadv {
+  padding: 0 0.55rem;
+  height: 2.03rem;
+  background: url(../images/detail_icon_bg.png) no-repeat;
+  background-size: 100% 100%;
+}
