--- a/less/detail.less
+++ b/less/detail.less
@@ -3,7 +3,8 @@
 .plan{}
 .lv{
     .h(222);
-    background: linear-gradient(to bottom, #ff3c00 0%,#d80607 100%);
+    background: #d80607;
+    background: linear-gradient(to bottom, #ff3c00,#d80607);
     p{
         text-align: center;
         color: #FFF;
