--- a/css/detail.css
+++ b/css/detail.css
@@ -223,6 +223,10 @@ footer .copyright {
   text-align: center;
   margin-top: 0.22rem;
 }
+.plan {
+  background-color: #FFF;
+  padding-bottom: 0.2rem;
+}
 .lv {
   height: 2.22rem;
   background: #d80607;
@@ -259,6 +263,74 @@ footer .copyright {
 .fadv {
   padding: 0 0.55rem;
   height: 2.03rem;
+  margin-top: 0.3rem;
   background: url(../images/detail_icon_bg.png) no-repeat;
   background-size: 100% 100%;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+.fadv li {
+  width: 50%;
+  text-align: center;
+  font-size: 0.24rem;
+  color: #ffc166;
+}
+.fadv li .iconfont {
+  width: 0.55rem;
+  height: 0.55rem;
+  line-height: 0.55rem;
+  text-align: center;
+  font-size: 0.28rem;
+  display: inline-block;
+  border-radius: 50%;
+  border: 1px solid #f5f5f5;
+  margin-right: 0.13rem;
+}
+.proccess {
+  width: 6.82rem;
+  margin: 0 auto;
+  margin-top: 0.7rem;
+}
+.proccess .jdt {
+  position: relative;
+  height: 0.15rem;
+  background-color: #f0f0f0;
+  border-radius: 8px;
+}
+.proccess .jdt .probar {
+  position: absolute;
+  width: 0px;
+  height: 0.15rem;
+  background-color: #fb0502;
+  border-radius: 8px;
+  transition: width 3s ease-in-out;
+}
+.proccess .jdt .pro-block {
+  position: absolute;
+  width: 0.6rem;
+  height: 0.32rem;
+  line-height: 0.32rem;
+  left: -0.3rem;
+  top: -0.5rem;
+  font-size: 0.2rem;
+  color: #FFF;
+  text-align: center;
+  background-color: #fb0502;
+  transition: left 3s ease-in-out;
+}
+.proccess .jdt .pro-block:after {
+  content: '';
+  display: block;
+  border-style: solid dashed dashed dashed;
+  border-color: #fb0502 transparent transparent transparent;
+  border-width: 10px;
+  width: 0;
+  height: 0;
+  overflow: hidden;
+  margin-top: 0.03rem;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
 }
