--- a/less/detail.less
+++ b/less/detail.less
@@ -1,6 +1,6 @@
 @import 'zcm.less';
 
-.plan{}
+.plan{background-color: #FFF;.pb(20);}
 .lv{
     .h(222);
     background: #d80607;
@@ -37,6 +37,69 @@
 .fadv{
     .plr(55);
     .h(203);
+    .mt(30);
+    
     background: url(../images/detail_icon_bg.png) no-repeat;
     background-size: 100% 100%;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    li{
+       width:50%;
+       text-align: center;
+       .fs(24);
+       color: #ffc166;
+       .iconfont{
+           .w(55);
+           .h(55);
+           .lh(55);
+           text-align: center;
+           .fs(28);
+           display: inline-block;
+           border-radius: 50%;
+           border: 1px solid #f5f5f5;
+           .mr(13);
+       }
+    }
+}
+.proccess{
+    .w(682);
+    margin: 0 auto;
+    .mt(70);
+    .jdt{
+        position: relative;
+        .h(15);
+        background-color: #f0f0f0;
+        border-radius:8px;
+        .probar{
+            position: absolute;
+            width:0px;
+            .h(15);
+            background-color: #fb0502;
+            border-radius:8px;
+            transition: width 3s ease-in-out;
+        }
+        .pro-block{
+            position: absolute;
+            .w(60);
+            .h(32);
+            .lh(32);
+            .left(-60/2);
+            .top(-50);
+            .fs(20);
+            color: #FFF;
+            text-align: center;
+            background-color: #fb0502;
+            transition: left 3s ease-in-out;
+            &:after{
+                content: '';
+                display: block;
+                .triangle-b(10px,#fb0502);
+                .mt(3);
+                .hc();
+            }
+        }
+        
+    }
 }
