--- a/less/detail.less
+++ b/less/detail.less
@@ -1,6 +1,6 @@
 @import 'zcm.less';
 
-.plan{background-color: #FFF;.pb(20);}
+.plan{background-color: #FFF;.pb(40);}
 .lv{
     .h(222);
     background: #d80607;
@@ -101,5 +101,51 @@
             }
         }
         
+    }
+    .monty{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        color: #808080;
+        .fs(22);
+        .mt(22);
+        .pb(40);
+        span{color: #FF0000;}
+    }
+}
+footer{
+    padding: 0;
+}
+.now{
+    position: fixed;
+    bottom: 0;
+    width:100%;
+    .h(105);
+    background-color: #f0f0f0;
+    display: flex;
+    align-items: center;
+    .pl(36);
+    .pr(15);
+    justify-content: space-between;
+    .gs{
+       .fs(32);
+       color: #f90;
+       text-decoration: underline;
+    }
+    .tz{
+        .w(517);
+        .h(82);
+        .fs(30);
+        background-color: #fa3432;
+        text-align: center;
+        .lh(82);
+        color: #FFF;
+    }
+    .detailc{
+        position: absolute;
+        .top(-40);
+        color: #808080;
+        .fs(28);
+        .hc;
     }
 }
