--- a/css/detail.css
+++ b/css/detail.css
@@ -315,6 +315,7 @@ footer .copyright {
   left: -0.3rem;
   top: -0.5rem;
   font-size: 0.2rem;
+  padding: 0 0.05rem;
   color: #FFF;
   text-align: center;
   background-color: #fb0502;
