--- a/less/detail.less
+++ b/less/detail.less
@@ -88,6 +88,7 @@
             .left(-60/2);
             .top(-50);
             .fs(20);
+            .plr(5);
             color: #FFF;
             text-align: center;
             background-color: #fb0502;
